ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: my-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway-default
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway-default
  namespace: default
spec:
  type: ExternalName
  externalName: istio-ingressgateway.istio-ingress.svc.cluster.local
