virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: my-virtual-service
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - istio-ingress/my-gateway
  http:
    - name: my-app
      match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: my-app-service
            port:
              number: 80
